$Id$

Summary of Changes to DuroDBMS

DuroDBMS 0.20

- Implemented transition constraints.

- Implemented system keys using serial().

- Fixed bugs in the handling of default values and array-valued attributes.

- Refactored the code, moving functions which do not depend on persistence to
  directory obj.

DuroDBMS 0.19

- Renamed Duro_exit_interp() to Duro_destroy_interp(). 

- Added system constraint sys_indexes { tablename } subset_of sys_rtables { tablename }.  

- Added D_UNION.

- A rollback now sets all user tables to a special state so that when they
  are accessed it is checked if they still exist in the catalog.

- Replaced FOREACH by FOR.

- Added type 'identifier' which is used in the catalog.

- Added support for public tables.

- Fixed possible double free in the parser when invalid
  characters are read.

DuroDBMS 0.18

- UPDATE expression now allows empty attribute assign list.

- Syntax of RENAME and SUMMARIZE are now close to Tutorial version from Oct 30, 2011. 

- Duro D/T: Added implicit transaction support. 

- Fixed issue with updating key attributes.

- Added initexp argument to RDB_define_type() and INIT specification
  to type definition statement. Added initexp argument to duro::type define.

DuroDBMS 0.17

- Improved query optimization, escpecially MINUS, INTERSECT, SEMIMINUS, and SEMIJOIN.

- Added RDB_table_matching_tuple() to the public interface.

- Added FastCGI support.

- Renamed length(string) to strlen().

- Operator www_form_to_tuple converts urlencoded form data to a tuple value.

- Changed operator precedence to allow for expressions like
  T1 { A } SUBSET_OF T2 { A }

- getenv() returns an empty string if the environment variable does not exist.

- Improved support for type binary, including read() operators for reading
  binary data.

- Assigning components in a multiple assignment now supported.

- Added LIKE operator.

- Renamed MATCHES to REGEX_LIKE.

- index_of() operator supports searching in arrays.
