@@ -2,7 +2,7 @@
 
 $Id$
 
-This directory contains the binary Windows release of DuroDBMS, a relational
+This file contains information on the binary Windows release of DuroDBMS, a relational
 database management system.
 
 Complete source code is available from http://sourceforge.net/projects/duro.
@@ -12,7 +12,7 @@ The following software is required for running this version of DuroDBMS:
 - Berkeley DB Transactional Data Store (release 5.3 recommended)
 - POSIX.2 regular expressions (e.g., GNU Regex)
 - GNU Libtool
-- Tcl 8.1 or later
+- Tcl 8.1 or later (optional)
 
 Add the directories where the respective DLLs are located to PATH,
 together with the 'bin' subdirectory of the DuroDBMS root directory.
