@@ -1,1 +1,0 @@
-put_line('Hello world!');
