@@ -25,7 +25,7 @@ test oindex {ordered indexes} -setup $SETUP -body {
        {A integer}
        {B string}
        {C string}
-       {D string x}
+       {D string 'x'}
     } {{A}} $tx
 
     duro::index create IX1 T1 {B asc} $tx
